--- a/Projektarbete.html
+++ b/Projektarbete.html
@@ -11,16 +11,21 @@
 <body>
     <div class="grid-container">
         <nav>
-            <ul>
-                <li><a href="#"></a>Utbildning</li>
-                <li><a href="#"></a>Forskning</li>
-                <li><a href="#"></a>Samverkan & innovation</li>
-                <li><a href="#"></a>Universitet</li>
+            <ul class="navbar">
+                <li><a href="#">Utbildning</a></li>
+                <li><a href="#">Forskning</a></li>
+                <li><a href="#">Samverkan & innovation</a></li>
+                <li><a href="#">Universitet</a></li>
             </ul>
         </nav>
-        <header>
+        <div class="header-container">
+        <header> 
+            <div class="logo">
+                <img src="images/brain.jpg" alt="bild på hjärna">
+            </div>
             <h1>Hjärnkontoriska Universitetet</h1>
         </header>
+    </div>
 
         <aside>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat, impedit.</aside>
 
