Fixat header-container, och lagt till en sökruta
Co-authored-by: Murat Acar <murat.acar@utb.ecutbildning.se>
Co-authored-by: Johan Nihlén <johan.nihlen@utb.ecutbildning.se>
Co-authored-by: SepVaz <SepVaz@users.noreply.github.com>
Co-authored-by: Jakob  Malm <jakob.malm@utb.ecutbildning.se>

--- a/Projektarbete.html
+++ b/Projektarbete.html
@@ -19,13 +19,17 @@
             </ul>
         </nav>
         <div class="header-container">
-        <header> 
-            <div class="logo">
-                <img src="images/brain.jpg" alt="bild på hjärna">
-            </div>
-            <h1>Hjärnkontoriska Universitetet</h1>
-        </header>
-    </div>
+            <header>
+                <div class="logo">
+                    <img src="images/brain.jpg" alt="bild på hjärna">
+                </div>
+                <h1>Hjärnkontoriska <br> Universitetet</h1>
+                <div class="form">
+                    <label for="textruta">Sök förfan</label> <br>
+                    <input type="email" name="text" id="textruta">
+                </div>
+            </header>
+        </div>
 
         <aside>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat, impedit.</aside>
 
