fixat 1 animation, murats första commit
Co-authored-by: Michel Gorjizadeh <michel.gorjizadeh@utb.ecutbildning.se>
Co-authored-by: SepVaz <SepVaz@users.noreply.github.com>
Co-authored-by: Johan Nihlén <johan.nihlen@utb.ecutbildning.se>

--- a/Projektarbete.html
+++ b/Projektarbete.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Hjärnkontoriska Universitetet</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -14,7 +16,7 @@
             <ul class="navbar">
                 <li><a href="#">Utbildning</a></li>
                 <li><a href="#">Forskning</a></li>
-                <li><a href="#">Samverkan & innovation</a></li>
+                <li><a href="#">Samverkan & Innovation</a></li>
                 <li><a href="#">Universitet</a></li>
             </ul>
         </nav>
@@ -25,7 +27,7 @@
                 </div>
                 <h1>Hjärnkontoriska <br> Universitetet</h1>
                 <div class="form">
-                    <label for="textruta">Sök förfan</label> <br>
+                    <label for="textruta">Hjärnsökning</label> <br>
                     <input type="email" name="text" id="textruta">
                 </div>
             </header>
