Johans första commit. Lagt till hero-image
Co-authored-by: SepVaz <SepVaz@users.noreply.github.com>
Co-authored-by: Murat Acar <murat.acar@utb.ecutbildning.se>
Co-authored-by: Michel Gorjizadeh <michel.gorjizadeh@utb.ecutbildning.se>
Co-authored-by: Jakob  Malm <jakob.malm@utb.ecutbildning.se>

--- a/Projektarbete.html
+++ b/Projektarbete.html
@@ -8,6 +8,7 @@
     <title>Hjärnkontoriska Universitetet</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/46ad55acf4.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -26,17 +27,23 @@
                     <img src="images/brain.jpg" alt="bild på hjärna">
                 </div>
                 <h1>Hjärnkontoriska <br> Universitetet</h1>
-                <div class="form">
-                    <label for="textruta">Hjärnsökning</label> <br>
-                    <input type="email" name="text" id="textruta">
-                </div>
+
+
             </header>
         </div>
 
         <aside>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat, impedit.</aside>
 
-        <main>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus delectus quaerat omnis ad quas
-            doloremque aliquid inventore, maiores et temporibus.</main>
+        <main>
+            <div class="hero-image">
+                <div class="form-container">
+                    <div class="form">
+                        <i class="fa-solid fa-magnifying-glass"></i> <label for="textruta"></label>
+                        <input type="email" name="text" id="textruta">
+                    </div>
+                </div>
+            </div>
+        </main>
 
         <footer>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus, nostrum error? Quaerat nostrum
             recusandae ipsam perferendis totam qui quis voluptatum.</footer>
