--- a/Projektarbete.html
+++ b/Projektarbete.html
@@ -23,10 +23,7 @@
         </nav>
         <div class="header-container">
             <header>
-                <div class="logo">
-                    <img src="images/brain.jpg" alt="bild på hjärna">
-                </div>
-                <h1>Hjärnkontoriska <br> Universitetet</h1>
+                <h1>Hjärnkontoriska Universitetet</h1>
 
 
             </header>
@@ -38,8 +35,10 @@
             <div class="hero-image">
                 <div class="form-container">
                     <div class="form">
-                        <i class="fa-solid fa-magnifying-glass"></i> <label for="textruta"></label>
-                        <input type="email" name="text" id="textruta">
+                        <label for="textruta"></label>
+                        <input type="email" name="text" id="textruta" placeholder="Hjärnsökning...">
+                        <button class="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                        
                     </div>
                 </div>
             </div>
