--- a/Projektarbete.html
+++ b/Projektarbete.html
@@ -13,14 +13,20 @@
 
 <body>
     <div class="grid-container">
-        <nav>
-            <ul class="navbar">
-                <li><a href="#">Utbildning</a></li>
-                <li><a href="#">Forskning</a></li>
-                <li><a href="#">Samverkan & Innovation</a></li>
-                <li><a href="#">Universitet</a></li>
-            </ul>
-        </nav>
+        <div class="grid-nav">
+
+            <nav>
+                <div class="logo">
+                    <img src="images/brain-2.png" alt="bild på hjärna">
+                </div>
+                <ul class="navbar">
+                    <li><a href="#">Utbildning</a></li>
+                    <li><a href="#">Forskning</a></li>
+                    <li><a href="#">Samverkan & Innovation</a></li>
+                    <li><a href="#">Universitet</a></li>
+                </ul>
+            </nav>
+        </div>
         <div class="header-container">
             <header>
                 <h1>Hjärnkontoriska Universitetet</h1>
@@ -38,14 +44,20 @@
                         <label for="textruta"></label>
                         <input type="email" name="text" id="textruta" placeholder="Hjärnsökning...">
                         <button class="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-                        
                     </div>
                 </div>
             </div>
         </main>
 
-        <footer>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus, nostrum error? Quaerat nostrum
-            recusandae ipsam perferendis totam qui quis voluptatum.</footer>
+        <footer>
+            <ul class="timeline">
+                </li>
+                <li data-year="" data-text=></li>
+                <li data-year="" data-text=></li>
+                <li data-year="" data-text=></li>
+                <li data-year="" data-text=></li>
+            </ul>
+        </footer>
 
 
 
