murats andra commit, fixat små saker
Co-authored-by: Michel Gorjizadeh <michel.gorjizadeh@utb.ecutbildning.se>
Co-authored-by: SepVaz <SepVaz@users.noreply.github.com>
Co-authored-by: Johan Nihlén <johan.nihlen@utb.ecutbildning.se>
Co-authored-by: Jakob  Malm <jakob.malm@utb.ecutbildning.se>

--- a/Projektarbete.html
+++ b/Projektarbete.html
@@ -14,7 +14,6 @@
 <body>
     <div class="grid-container">
         <div class="grid-nav">
-
             <nav>
                 <div class="logo">
                     <img src="images/brain-2.png" alt="bild på hjärna">
@@ -24,18 +23,25 @@
                     <li><a href="#">Forskning</a></li>
                     <li><a href="#">Samverkan & Innovation</a></li>
                     <li><a href="#">Universitet</a></li>
+
                 </ul>
+                <div class="hamburger">
+                    <img src="images/icons8-hamburger-menu-50.png" alt="">
+                </div>
             </nav>
         </div>
         <div class="header-container">
             <header>
                 <h1>Hjärnkontoriska Universitetet</h1>
-
-
             </header>
         </div>
 
-        <aside>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat, impedit.</aside>
+        <aside>
+            <h2>Lorem</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem non illo reprehenderit, quasi provident
+                quam veniam quas autem cupiditate ut at? Hic voluptatum reprehenderit architecto tenetur voluptatem unde
+                sed laborum? Iusto molestias eum modi rerum nobis asperiores quod ab minima.</p>
+        </aside>
 
         <main>
             <div class="hero-image">
@@ -52,10 +58,11 @@
         <footer>
             <ul class="timeline">
                 </li>
-                <li data-year="" data-text=></li>
-                <li data-year="" data-text=></li>
-                <li data-year="" data-text=></li>
-                <li data-year="" data-text=></li>
+                <li data-year="Murat" data-text=></li>
+                <li data-year="Michel" data-text=></li>
+                <li data-year="Johan" data-text=></li>
+                <li data-year="Sepideh" data-text=></li>
+                <li data-year="Jakob" data-text=></li>
             </ul>
         </footer>
 
