Lagt cards och lite SEO
Co-authored-by: Murat Acar <murat.acar@utb.ecutbildning.se>
Co-authored-by: Michel Gorjizadeh <michel.gorjizadeh@utb.ecutbildning.se>
Co-authored-by: Jakob  Malm <jakob.malm@utb.ecutbildning.se>

--- a/Projektarbete.html
+++ b/Projektarbete.html
@@ -19,14 +19,14 @@
                     <img src="images/brain-2.png" alt="bild på hjärna">
                 </div>
                 <ul class="navbar">
-                    <li><a href="#">Utbildning</a></li>
-                    <li><a href="#">Forskning</a></li>
-                    <li><a href="#">Samverkan & Innovation</a></li>
-                    <li><a href="#">Universitet</a></li>
+                    <li><a href="utbildning.htlm">Utbildning</a></li>
+                    <li><a href="forskning.html">Forskning</a></li>
+                    <li><a href="innovation.html">Innovation</a></li>
+                    <li><a href="universitet.html">Universitet</a></li>
 
                 </ul>
                 <div class="hamburger">
-                    <img src="images/icons8-hamburger-menu-50.png" alt="">
+                    <img src="images/icons8-hamburger-menu-50.png" alt="hamburgermenu">
                 </div>
             </nav>
         </div>
@@ -37,7 +37,7 @@
         </div>
 
         <aside>
-            <h2>Lorem</h2>
+            <h2>Vårt forskningsprogram</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem non illo reprehenderit, quasi provident
                 quam veniam quas autem cupiditate ut at? Hic voluptatum reprehenderit architecto tenetur voluptatem unde
                 sed laborum? Iusto molestias eum modi rerum nobis asperiores quod ab minima.</p>
@@ -54,7 +54,29 @@
                 </div>
             </div>
         </main>
+        <div class="main2">
 
+            <div class="cards">
+                <div class="card-container">
+
+                    <img src="images/inaki-del-olmo-NIJuEQw0RKg-unsplash.jpg" alt="books">
+                    <h3>Vårt bibliotek</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, tenetur.</p>
+                </div>
+                <div class="card-container">
+
+                    <img src="images/inaki-del-olmo-NIJuEQw0RKg-unsplash.jpg" alt="books">
+                    <h3>Vårt bibliotek</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, tenetur.</p>
+                </div>
+                <div class="card-container">
+
+                    <img src="images/inaki-del-olmo-NIJuEQw0RKg-unsplash.jpg" alt="books">
+                    <h3>Vårt bibliotek</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, tenetur.</p>
+                </div>
+            </div>
+        </div>
         <footer>
             <ul class="timeline">
                 </li>
