--- a/Projektarbete.html
+++ b/Projektarbete.html
@@ -6,24 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Hjärnkontoriska Universitetet</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@300&family=Libre+Baskerville&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/46ad55acf4.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
     <div class="grid-container">
         <div class="grid-nav">
             <nav>
-                <div class="logo">
-                    <img src="images/brain-2.png" alt="bild på hjärna">
-                </div>
                 <ul class="navbar">
                     <li><a href="utbildning.htlm">Utbildning</a></li>
                     <li><a href="forskning.html">Forskning</a></li>
                     <li><a href="innovation.html">Innovation</a></li>
                     <li><a href="universitet.html">Universitet</a></li>
-
                 </ul>
                 <div class="hamburger">
                     <img src="images/icons8-hamburger-menu-50.png" alt="hamburgermenu">
@@ -35,14 +30,17 @@
                 <h1>Hjärnkontoriska Universitetet</h1>
             </header>
         </div>
-
         <aside>
-            <h2>Vårt forskningsprogram</h2>
+            <div class="flex-container">
+                <h2>Vårt forskningsprogram</h2>
+                <div class="logo">
+                    <img src="images/brain-2.png" alt="bild på hjärna">
+                </div>
+            </div>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem non illo reprehenderit, quasi provident
                 quam veniam quas autem cupiditate ut at? Hic voluptatum reprehenderit architecto tenetur voluptatem unde
                 sed laborum? Iusto molestias eum modi rerum nobis asperiores quod ab minima.</p>
         </aside>
-
         <main>
             <div class="hero-image">
                 <div class="form-container">
@@ -55,31 +53,28 @@
             </div>
         </main>
         <div class="main2">
-
             <div class="cards">
                 <div class="card-container">
-
                     <img src="images/inaki-del-olmo-NIJuEQw0RKg-unsplash.jpg" alt="books">
                     <h3>Vårt bibliotek</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, tenetur.</p>
                 </div>
                 <div class="card-container">
 
-                    <img src="images/inaki-del-olmo-NIJuEQw0RKg-unsplash.jpg" alt="books">
-                    <h3>Vårt bibliotek</h3>
+                    <img src="images/priscilla-du-preez-XkKCui44iM0-unsplash.jpg" alt="books">
+                    <h3>Evenemang</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, tenetur.</p>
                 </div>
                 <div class="card-container">
 
-                    <img src="images/inaki-del-olmo-NIJuEQw0RKg-unsplash.jpg" alt="books">
-                    <h3>Vårt bibliotek</h3>
+                    <img src="images/rodeo-project-management-software-iqLVxrHp46k-unsplash.jpg" alt="books">
+                    <h3>Faciliteter</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, tenetur.</p>
                 </div>
             </div>
         </div>
         <footer>
             <ul class="timeline">
-                </li>
                 <li data-year="Murat" data-text=></li>
                 <li data-year="Michel" data-text=></li>
                 <li data-year="Johan" data-text=></li>
@@ -87,9 +82,6 @@
                 <li data-year="Jakob" data-text=></li>
             </ul>
         </footer>
-
-
-
     </div>
 </body>
 
