--- a/Projektarbete.html
+++ b/Projektarbete.html
@@ -55,19 +55,19 @@
         <div class="main2">
             <div class="cards">
                 <div class="card-container">
-                    <img src="images/inaki-del-olmo-NIJuEQw0RKg-unsplash.jpg" alt="books">
+                    <img src="images/inaki-del-olmo-NIJuEQw0RKg-unsplash.jpg" alt="Bild på vårt bibliotek">
                     <h3>Vårt bibliotek</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, tenetur.</p>
                 </div>
                 <div class="card-container">
 
-                    <img src="images/priscilla-du-preez-XkKCui44iM0-unsplash.jpg" alt="books">
+                    <img src="images/priscilla-du-preez-XkKCui44iM0-unsplash.jpg" alt="Bild på evenemang">
                     <h3>Evenemang</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, tenetur.</p>
                 </div>
                 <div class="card-container">
 
-                    <img src="images/rodeo-project-management-software-iqLVxrHp46k-unsplash.jpg" alt="books">
+                    <img src="images/rodeo-project-management-software-iqLVxrHp46k-unsplash.jpg" alt="Bild på våra faciliteter">
                     <h3>Faciliteter</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, tenetur.</p>
                 </div>
