--- a/Projektarbete.html
+++ b/Projektarbete.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hjärnkontoriska Universitetet, bibliotek, campus, högkvalitativ forskning, innovativa lösningar">
+    <meta name="keywords" content="Forskning, Utbildning, Innovation, Universitet, Bibliotek, Evenemang, Faciliteter, Hjärnkontoriska Universitetet">
+
     <link rel="stylesheet" href="style.css">
     <title>Hjärnkontoriska Universitetet</title>
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@300&family=Libre+Baskerville&display=swap"
