--- a/Projektarbete.html
+++ b/Projektarbete.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@300&family=Libre+Baskerville&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/46ad55acf4.js" crossorigin="anonymous"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="grid-container">
