json-fil skapad och script påbörjad

--- a/Projektarbete.html
+++ b/Projektarbete.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Hjärnkontoriska Universitetet, bibliotek, campus, högkvalitativ forskning, innovativa lösningar">
-    <meta name="keywords" content="Forskning, Utbildning, Innovation, Universitet, Bibliotek, Evenemang, Faciliteter, Hjärnkontoriska Universitetet">
+    <meta name="description"
+        content="Hjärnkontoriska Universitetet, bibliotek, campus, högkvalitativ forskning, innovativa lösningar">
+    <meta name="keywords"
+        content="Forskning, Utbildning, Innovation, Universitet, Bibliotek, Evenemang, Faciliteter, Hjärnkontoriska Universitetet">
 
     <link rel="stylesheet" href="style.css">
     <title>Hjärnkontoriska Universitetet</title>
@@ -14,6 +16,7 @@
     <script src="https://kit.fontawesome.com/46ad55acf4.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
 </head>
+
 <body>
     <div class="grid-container">
         <div class="grid-nav">
@@ -71,20 +74,19 @@
                 </div>
                 <div class="card-container">
 
-                    <img src="images/rodeo-project-management-software-iqLVxrHp46k-unsplash.jpg" alt="Bild på våra faciliteter">
+                    <img src="images/rodeo-project-management-software-iqLVxrHp46k-unsplash.jpg"
+                        alt="Bild på våra faciliteter">
                     <h3>Faciliteter</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, tenetur.</p>
                 </div>
             </div>
         </div>
         <footer>
-            <ul class="timeline">
-                <li data-year="Murat" data-text=></li>
-                <li data-year="Michel" data-text=></li>
-                <li data-year="Johan" data-text=></li>
-                <li data-year="Sepideh" data-text=></li>
-                <li data-year="Jakob" data-text=></li>
-            </ul>
+        
+            <form id="bookForm">
+                
+            </form>
+
         </footer>
     </div>
 </body>
