efter vi misslyckades, revidering av gabriella
Co-authored-by: Johan Nihlén <johan.nihlen@utb.ecutbildning.se>
Co-authored-by: Michel Gorjizadeh <michel.gorjizadeh@utb.ecutbildning.se>
Co-authored-by: SepVaz <SepVaz@users.noreply.github.com>
Co-authored-by: Jakob  Malm <jakob.malm@utb.ecutbildning.se>

--- a/Projektarbete.html
+++ b/Projektarbete.html
@@ -61,11 +61,13 @@
         </main>
         <div class="main2">
             <div class="cards">
-                <a href="bibliotek.html"><div class="card-container">
-                    <img src="images/inaki-del-olmo-NIJuEQw0RKg-unsplash.jpg" alt="Bild på vårt bibliotek">
-                    <h3>Vårt bibliotek</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, tenetur.</p>
-                </div></a>
+                <a href="bibliotek.html">
+                    <div class="card-container">
+                        <img src="images/inaki-del-olmo-NIJuEQw0RKg-unsplash.jpg" alt="Bild på vårt bibliotek">
+                        <h3>Vårt bibliotek</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, tenetur.</p>
+                    </div>
+                </a>
                 <div class="card-container">
 
                     <img src="images/priscilla-du-preez-XkKCui44iM0-unsplash.jpg" alt="Bild på evenemang">
@@ -82,8 +84,8 @@
             </div>
         </div>
         <footer>
-        
-            
+
+
 
         </footer>
     </div>
