--- a/bibliotek.html
+++ b/bibliotek.html
@@ -80,11 +80,14 @@
                 <textarea id="inputField" cols="30" rows="10" name="inputField"></textarea>
                 <label for="imageUrl">Ange Earl till bilden:</label>
                 <input id="imageUrl" type="text" name="imageUrl">
-                <button type="submit">Ladda upp</button>
+                <button type="submit" id="submitBtn">Ladda upp</button>
 
 
 
             </form>
+           <div id="addBook"> 
+
+           </div>
             <div class="cards">
 
                 <form id="bookForm">
