lite css, färdigt med projektarbetet Co-authored-by: Johan Nihlén <johan.nihlen@utb.ecutbildning.se>

--- a/Projektarbete.html
+++ b/Projektarbete.html
@@ -22,6 +22,7 @@
         <div class="grid-nav">
             <nav>
                 <ul class="navbar">
+                    <li><a href="Projektarbete.html">Hem</a></li>
                     <li><a href="utbildning.htlm">Utbildning</a></li>
                     <li><a href="forskning.html">Forskning</a></li>
                     <li><a href="innovation.html">Innovation</a></li>
