--- a/bibliotek.html
+++ b/bibliotek.html
@@ -22,6 +22,7 @@
         <div class="grid-nav">
             <nav>
                 <ul class="navbar">
+                    <li><a href="Projektarbete.html">Hem</a></li>
                     <li><a href="utbildning.htlm">Utbildning</a></li>
                     <li><a href="forskning.html">Forskning</a></li>
                     <li><a href="innovation.html">Innovation</a></li>
@@ -62,6 +63,7 @@
             </div>
         </main>
         <div class="main2">
+            <div class="form-container">
             <form id="inputForm">
                 <label for="bookSelect">Skriv titel på boken: </label>
                 <input id="bookSelect" type="text" name="bookSelect">
@@ -83,7 +85,7 @@
                 <button type="submit" id="submitBtn">Ladda upp</button>
 
             </form>
-
+        </div>
             <div class="cards">
 
                 <form id="bookForm">
