--- a/bibliotek.html
+++ b/bibliotek.html
@@ -63,7 +63,7 @@
             </div>
         </main>
         <div class="main2">
-            <div class="form-container">
+            <div class="form-container2">
             <form id="inputForm">
                 <label for="bookSelect">Skriv titel på boken: </label>
                 <input id="bookSelect" type="text" name="bookSelect">
